adding callout for lettuc in rate limiting tutorial

--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-gears.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-gears.mdx
@@ -5,6 +5,12 @@ sidebar_label: Atomicity with Gears
 slug: /develop/java/spring/rate-limiting/fixed-window/reactive-gears
 ---
 
+:::warning LETTUCE
+
+This tutorial uses Lettuce, which is an unsupported Redis library. For production applications, we recommend using [<u>**Jedis**</u>](https://github.com/redis/jedis)
+
+:::
+
 ## Improving atomicity and performance with RedisGears
 
 ### What is RedisGears?
