--- a/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
@@ -6,6 +6,12 @@ slug: /develop/java/redis-and-spring-course/lesson_7
 authors: [bsb]
 ---
 
+:::warning LETTUCE
+
+This tutorial uses Lettuce, which is an unsupported Redis library. For production applications, we recommend using [<u>**Jedis**</u>](https://github.com/redis/jedis)
+
+:::
+
 import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
