added vector solution in sidebar

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -153,3 +153,18 @@ Learn how to easily build, test and deploy code for common microservice and cach
 </div>
 
 </div>
+
+## Vectors
+
+<div class="row">
+
+<div class="col">
+  <RedisCard
+    title="Vector Similarity Search"
+    description="Getting Started with Vector Search Using Redis in NodeJS"
+    page="/howtos/solutions/vector/getting-started-vector"
+  />
+</div>
+<div class="col">
+</div>
+</div>
